--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@ body {
 
 }
 
+hr {
+    margin : 2rem 0rem;
+}
 .container {
 
     padding: 0rem 1rem;
@@ -24,8 +27,14 @@ body {
     padding: 0.5rem 1rem;
 }
 
-.primary-link {
+.link-primary {
     background-color: var(--primary-color);
     border-radius: 0.5rem;
     color: white;
+}
+
+.link-secondary {
+    color: var(--primary-color);
+    border-radius: 0.5rem;
+    border: 1px solid var(--primary-color);
 }
