--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
 
 :root {
     --primary-color: blue;
+    --dark-gray:#6b7280
+
 }
 
 body {
@@ -37,4 +39,55 @@ hr {
     color: var(--primary-color);
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
+}
+
+.list-non-bullet{
+    list-style: none;
+}
+
+.list-item-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
+}
+
+.navigation{
+    background-color: var(--primary-color);
+    color: aliceblue;
+    padding: 1rem;
+    border-bottom-left-radius: 1rem;
+}
+
+.navigation .nav-brand{
+    font-weight: bold;
+}
+.navigation .nav-pills{
+    text-align: right;
+}
+ 
+.navigation .link{
+    color: aliceblue;
+}
+
+.navigation .link-active{
+    font-weight: bold;
+}
+
+.hero{
+    padding: 2rem;
+}
+
+.hero hero-img{
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+.hero .hero-heading{
+    padding-top:1rem ;
+color:var(--dark-gray) ;
+
+}
+
+.hero .hero-heading .heading-inverted{
+    color: var(--primary-color);
 }
